feat[PanamaUring] 1,部分prep的绑定，目前绑定到了nop